refactor: edit markup, css

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <div id="App">
-        <h1 class="tit-app"><img src="./resource/img/logo.png" alt=""></h1>
+        <h1 class="tit-app">
+            <img src="./resource/img/logo.png" alt="">
+        </h1>
         <div class="container">
             <section class="vending-machine">
                 <h2 class="ir">자판기 화면</h2>
-                <!-- menu -->
                 <ul class="list-item"></ul>
-                <!-- balance -->
                 <div class="cont-return">
                     <div class="info-balance">
                         잔액 : 
@@ -31,7 +31,6 @@
                     <input type="number" class="inp-put" placeholder="입금액 입력">
                     <button class="btn-put">입금</button>
                 </div>
-                <!-- basket -->
                 <div class="cont-get">
                     <strong class="ir">선택한 음료</strong>
                     <ul class="list-item-staged"></ul>
