refactor: 각 클래스별 기능 명확히 분할, 변수명 명확히 네이밍

--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
             </section>
         </div>
     </div>
-    <script src="./resource/js/modules.js"></script>
-    <script src="./resource/js/machine/basket.js"></script>
-    <script src="./resource/js/myinfo/myinfo.js"></script>
-    <script src="./resource/js/machine/balance.js"></script>
-    <script src="./resource/js/machine/menu.js"></script>
-    <script src="./resource/js/data.js"></script>
+    <script src="./resource/js/utils.js"></script>
+    <script src="./resource/js/api.js"></script>
+    <script src="./resource/js/myinfo/myinfoComponent.js"></script>
+    <script src="./resource/js/machine/basketComponent.js"></script>
+    <script src="./resource/js/machine/balanceComponent.js"></script>
+    <script src="./resource/js/machine/productList.js"></script>
+    <script src="./resource/js/machine/menuComponent.js"></script>
     <script src="./resource/js/machine/machine.js"></script>
     <script src="./resource/js/App.js"></script>
 </body>
