:truck: resource -> frontend 폴더명 변경

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resource/style/reset.css">
-    <link rel="stylesheet" href="resource/style/style.css">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div id="App">
         <h1 class="tit-app">
-            <img src="./resource/img/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
         </h1>
         <div class="container">
             <section class="vending-machine">
@@ -56,14 +56,14 @@
             </section>
         </div>
     </div>
-    <script src="./resource/js/utils.js"></script>
-    <script src="./resource/js/api.js"></script>
-    <script src="./resource/js/myinfo/myinfoComponent.js"></script>
-    <script src="./resource/js/machine/basketComponent.js"></script>
-    <script src="./resource/js/machine/balanceComponent.js"></script>
-    <script src="./resource/js/machine/productList.js"></script>
-    <script src="./resource/js/machine/menuComponent.js"></script>
-    <script src="./resource/js/machine/machine.js"></script>
-    <script src="./resource/js/App.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./js/api.js"></script>
+    <script src="./js/myinfo/myinfoComponent.js"></script>
+    <script src="./js/machine/basketComponent.js"></script>
+    <script src="./js/machine/balanceComponent.js"></script>
+    <script src="./js/machine/productList.js"></script>
+    <script src="./js/machine/menuComponent.js"></script>
+    <script src="./js/machine/machine.js"></script>
+    <script src="./js/App.js"></script>
 </body>
 </html>
